<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LastKnownLocationActivity">
    <TextView
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:text="@string/current_location_header"
            android:ems="10"
            android:id="@+id/header"
            android:textSize="28sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.493"/>
    <Button
            android:text="@string/current_location_update_button"
            android:textAllCaps="false"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:id="@+id/updateButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            app:layout_constraintHorizontal_bias="0.493" app:layout_constraintTop_toBottomOf="@+id/header"/>
    <TableLayout
            android:layout_width="316dp"
            android:layout_height="517dp" android:layout_marginTop="24dp"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@+id/updateButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <TableRow android:background="@drawable/border">
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_longitude"
                    android:padding="5dip"/>
            <TextView
                    android:id="@+id/longitudeValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_latitude"
                    android:padding="5dip"/>
            <TextView

                    android:id="@+id/latitudeValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow android:background="@drawable/border">
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_elevation"
                    android:padding="5dip"/>
            <TextView
                    android:id="@+id/altitudeValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_accuracy"
                    android:padding="5dip"/>
            <TextView

                    android:id="@+id/accuracyValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>