<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RequestLocationUpdatesActivity">
    <TextView
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:text="@string/request_location_updated_header"
            android:ems="10"
            android:id="@+id/header"
            android:textSize="28sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.493"/>
    <TableLayout
            android:layout_width="316dp"
            android:layout_height="147dp" android:layout_marginTop="28dp"
            android:stretchColumns="1"
            app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.493" android:id="@+id/tableLayout2">
        <TableRow android:background="@drawable/border">
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_longitude"
                    android:padding="5dip"/>
            <TextView
                    android:id="@+id/longitudeValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_latitude"
                    android:padding="5dip"/>
            <TextView

                    android:id="@+id/latitudeValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow android:background="@drawable/border">
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_elevation"
                    android:padding="5dip"/>
            <TextView
                    android:id="@+id/altitudeValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/current_location_accuracy"
                    android:padding="5dip"/>
            <TextView
                    android:id="@+id/accuracyValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow android:background="@drawable/border">
            <TextView
                    android:layout_column="1"
                    android:textStyle="bold"
                    android:text="@string/number_of_updates"
                    android:padding="5dip"/>
            <TextView
                    android:id="@+id/updatesValue"
                    android:gravity="end"
                    android:padding="5dip"/>
        </TableRow>

    </TableLayout>
    <Button
            android:text="SHOW ON MAP"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:id="@+id/showOnMapButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout2" app:layout_constraintHorizontal_bias="0.518"
    />
    <Button
            android:text="@string/reverse_geocode"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:id="@+id/reverseGeocode" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/showOnMapButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.457"/>
    <TextView
            android:id="@+id/addressText"
            android:text=""
            android:padding="5dip" android:layout_height="wrap_content" android:layout_width="313dp"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/reverseGeocode"/>
    <Spinner
            android:layout_width="317dp"
            android:layout_height="40dp"
            android:id="@+id/spinner" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/header" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.487"/>
</android.support.constraint.ConstraintLayout>