<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:text="@string/main_header"
            android:ems="10"
            android:id="@+id/header"
            android:textSize="30sp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.493"/>
    <Button
            android:text="@string/current_location_menu_text"
            android:layout_width="316dp"
            android:layout_height="wrap_content" android:id="@+id/lastKnownLocationButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.493" app:layout_constraintTop_toBottomOf="@+id/header"/>
    <Button
            android:text="@string/listen_to_changes_menu"
            android:layout_width="316dp"
            android:layout_height="wrap_content" android:id="@+id/listenButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintTop_toBottomOf="@+id/lastKnownLocationButton"/>
    <Button
            android:text="Show map"
            android:layout_width="318dp"
            android:layout_height="wrap_content" android:id="@+id/showMapButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.506" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/listenButton"/>
</android.support.constraint.ConstraintLayout>